--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Resume-Sanju Srivatsa</title>
+</head>
+<body>
+  
+
 <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 <div class="resume">
   
@@ -209,3 +220,5 @@ analyzing the problems and implement the processes to improve.</li>
 
 
   
+</body>
+</html>
